# jj-navi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PRD.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-detect.yml  release-metadata.yml  release-prepare.yml  release-publish.yml  release.yml  test.yml
.release/: 20260311072123-unifying-releases.md  20260312120428-add-navi-remove-for-forget-only-workspace-remova.md  20260312124539-patch-release.md  20260312152007-add-navi-remove-for-forget-only-workspace-remova.md  README.md
npm/jj-navi/: README.md  package.json
npm/scripts/: generate-platform-package.mjs  readme.mjs  sync-wrapper-readme.mjs  update-versions.mjs
scripts/release/: new  new-fragment.mjs  notes.mjs  plan.mjs  validate.mjs
scripts/release/lib/: changelog.mjs  files.mjs  fragments.mjs  version.mjs
src/: app.rs  completion.rs  doctor.rs  error.rs  lib.rs  main.rs  output.rs  types.rs
src/cli/: config.rs  doctor.rs  list.rs  mod.rs  remove.rs  switch.rs
src/commands/: config_shell.rs  doctor.rs  list.rs  merge.rs  mod.rs  remove.rs  switch.rs
src/diagnostics/: mod.rs  render.rs
src/output/: mod.rs  render.rs  shell.rs
src/repo/: config.rs  discovery.rs  doctor.rs  jj.rs  metadata.rs  mod.rs  paths.rs  state.rs  workspace.rs
src/shell/: directive.rs  init.rs  install.rs  managed_block.rs  mod.rs
tests/: completion_tests.rs  config_shell_tests.rs  doctor_tests.rs  fresh_list_tests.rs  integration_tests.rs  list_tests.rs  merge_preview_tests.rs  remove_tests.rs  repo_integration_tests.rs  switch_tests.rs  unit_tests.rs
tests/common/: cli.rs  mod.rs  temp_repo.rs
xtask/: Cargo.toml  README.md
xtask/src/: app.rs  changelog.rs  cli.rs  error.rs  github.rs  main.rs  project.rs  release.rs
