[package]
name = "jj-navi"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.87"
description = "Workspace navigator for Jujutsu"
license = "MIT"

[[bin]]
name = "navi"
path = "src/main.rs"

[lib]
name = "jj_navi"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pathdiff = "0.2"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
