[package]
name = "jj-navi"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.87"
description = "Workspace navigation and management for Jujutsu, built for parallel work by humans and AI agents"
license = "MIT"
repository = "https://github.com/eersnington/jj-navi"
homepage = "https://github.com/eersnington/jj-navi"
readme = "README.md"
keywords = ["jj", "jujutsu", "workspace", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "navi"
path = "src/main.rs"

[[bin]]
name = "nv"
path = "src/bin/nv.rs"

[lib]
name = "jj_navi"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pathdiff = "0.2"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
