[package]
name = "jj-navi"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"
exclude = ["xtask/"]
description = "Workspace navigation and management for Jujutsu, built for parallel human and AI agent workflows."
license = "MIT"
repository = "https://github.com/eersnington/jj-navi"
homepage = "https://github.com/eersnington/jj-navi"
readme = "README.md"
keywords = ["jj", "jujutsu", "workspace", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "navi"
path = "src/main.rs"

[[bin]]
name = "nv"
path = "src/bin/nv.rs"

[lib]
name = "jj_navi"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anstyle = "1"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
